--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/leaflet": "^1.9.16",
 		"autoprefixer": "^10.4.20",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
@@ -36,5 +37,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"leaflet": "^1.9.4"
 	}
 }
