--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.0.0-next.78",
 		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.5.2",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
